# book_library_api

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_10_11_1411-6ff4563664b5_update_post_model_add_pages_column.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: book.py
app/core/: config.py
app/crud/: __init__.py  book_crud.py
app/db/: __init__.py  db_session.py
app/models/: __init__.py  base_class.py
app/schemas/: book_schema.py
core/: config.py
core/models/: __init__.py  book.py  db_session.py
